fix css to make code visible

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -57,7 +57,8 @@ img {
 }
 
 .highlight {
-  background-color: #272822;
+  background-color: #f0f1ec;
+  font-family: 'Courier New', Courier, monospace
 }
 
 pre.highlight {
